--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "API tests for Payment System",
   "scripts": {
-    "test": "npx mocha --config.mocharc.js"
+    "test": "npx mocha --config .mocharc.js"
   },
   "keywords": [],
   "author": "Eva Niehaus",
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/register": "^7.15.3",
     "chai": "^4.3.4",
-    "mocha": "^9.1.0"
+    "mocha": "^9.1.0",
+    "supertest": "^6.1.6"
   }
 }
